[package]
name = "teemiao"
version = "0.1.6"
edition = "2024"
description = "Teemiao is a versatile toolkit designed to streamline application development workflows."
license = "Apache-2.0"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.8"
gix = "0.71.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[profile.release]
lto = true
strip = true
