[package]
name = "teemiao"
version = "0.1.7"
edition = "2024"
description = "Teemiao is a versatile toolkit designed to streamline application development workflows."
license = "Apache-2.0"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.9"
gix = "0.80.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[profile.release]
lto = true
strip = true
